apply plugin: "java"
apply plugin: "eclipse"

version = '1.0.0'
group = 'io.github.zekerzhayard.nashorncompatlayer' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
archivesBaseName = 'nashorn-compat-layer'

sourceCompatibility = targetCompatibility = compileJava.sourceCompatibility = compileJava.targetCompatibility = '15'

repositories {
    mavenCentral()
    maven {
        url = "https://files.minecraftforge.net/maven"
    }
}

dependencies {
    implementation "com.google.code.findbugs:jsr305:3.0.2"
    implementation "cpw.mods:modlauncher:8.0.6"
    implementation "org.openjdk.nashorn:nashorn-core:15.0"
}

jar {
    manifest {
        attributes([
                "Specification-Title": "NashornCompatLayer",
                "Specification-Vendor": "ZekerZhayard",
                "Specification-Version": "1", // We are version 1 of ourselves
                "Implementation-Title": project.name,
                "Implementation-Version": "${archiveVersion}",
                "Implementation-Vendor" :"ZekerZhayard",
                "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
        ])
    }
}

compileJava {
    options.compilerArgs += ["--enable-preview"]
}